Implementation complete for FIFO, LRU, Optimal